--- a/src/AaxAudioConverter/AaxAudioConverter.csproj
+++ b/src/AaxAudioConverter/AaxAudioConverter.csproj
@@ -1,20 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Costura.Fody.4.1.0\build\Costura.Fody.props" Condition="Exists('..\packages\Costura.Fody.4.1.0\build\Costura.Fody.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D186DE5D-0DEC-4FE8-80BC-9F473E804604}</ProjectGuid>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
     <RootNamespace>audiamus.aaxconv</RootNamespace>
-    <AssemblyName>AaxAudioConverter</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -30,31 +18,10 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
-    <Prefer32Bit>false</Prefer32Bit>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\audio.ico</ApplicationIcon>
@@ -63,275 +30,17 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Costura, Version=4.1.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
-      <HintPath>..\packages\Costura.Fody.4.1.0\lib\net40\Costura.dll</HintPath>
-    </Reference>
-    <Reference Include="CustomMarshalers" />
-    <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.4.0, Culture=neutral, PublicKeyToken=8985beaab7ea3f04, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft-WindowsAPICodePack-Core.1.1.4\lib\net48\Microsoft.WindowsAPICodePack.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.4.0, Culture=neutral, PublicKeyToken=8985beaab7ea3f04, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft-WindowsAPICodePack-Shell.1.1.4\lib\net48\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
+    <ProjectReference Include="..\AaxAudioConverterLib\AaxAudioConverterLib.csproj" />
+    <ProjectReference Include="..\AuxLib\AuxLib.csproj" />
+    <ProjectReference Include="..\AuxWin32Lib\AuxWin32Lib.csproj" />
+    <ProjectReference Include="..\AuxWinLib\AuxWinLib.csproj" />
+    <ProjectReference Include="..\AuxWinLib\DialogBox\AuxWin.DialogBox.csproj" />
+    <ProjectReference Include="..\PerfLib\PerfLib.csproj" />
+    <ProjectReference Include="..\PropGridLib\PropGridLib.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AaxFileItemEx.cs" />
-    <Compile Include="AboutForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AboutForm.Designer.cs">
-      <DependentUpon>AboutForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ActivationCodeForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ActivationCodeForm.Designer.cs">
-      <DependentUpon>ActivationCodeForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FileAssoc.cs" />
-    <Compile Include="FileDetailsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FileDetailsForm.Designer.cs">
-      <DependentUpon>FileDetailsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FileItemForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenresForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenresForm.Designer.cs">
-      <DependentUpon>GenresForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PerformanceHandler.cs" />
-    <Compile Include="PreviewForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PreviewForm.Designer.cs">
-      <DependentUpon>PreviewForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ProgressProcessor.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-    <Compile Include="Resources.cs" />
-    <Compile Include="SettingsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SettingsForm.Designer.cs">
-      <DependentUpon>SettingsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TypeConvertersRM.cs" />
-    <Compile Include="FFmpegLocationForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FFmpegLocationForm.Designer.cs">
-      <DependentUpon>FFmpegLocationForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PGANaming.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="StartupTipForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="StartupTipForm.Designer.cs">
-      <DependentUpon>StartupTipForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="WhatsNewForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WhatsNewForm.Designer.cs">
-      <DependentUpon>WhatsNewForm.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="AboutForm.de.resx">
-      <DependentUpon>AboutForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AboutForm.resx">
-      <DependentUpon>AboutForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ActivationCodeForm.de.resx">
-      <DependentUpon>ActivationCodeForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ActivationCodeForm.resx">
-      <DependentUpon>ActivationCodeForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FFmpegLocationForm.de.resx">
-      <DependentUpon>FFmpegLocationForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FFmpegLocationForm.resx">
-      <DependentUpon>FFmpegLocationForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FileDetailsForm.de.resx">
-      <DependentUpon>FileDetailsForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FileDetailsForm.resx">
-      <DependentUpon>FileDetailsForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenresForm.de.resx">
-      <DependentUpon>GenresForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenresForm.resx">
-      <DependentUpon>GenresForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.de.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PGANaming.de.resx">
-      <DependentUpon>PGANaming.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PGANaming.resx">
-      <DependentUpon>PGANaming.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PreviewForm.de.resx">
-      <DependentUpon>PreviewForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PreviewForm.resx">
-      <DependentUpon>PreviewForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.de.resx">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SettingsForm.de.resx">
-      <DependentUpon>SettingsForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SettingsForm.resx">
-      <DependentUpon>SettingsForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="StartupTipForm.de.resx">
-      <DependentUpon>StartupTipForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="StartupTipForm.resx">
-      <DependentUpon>StartupTipForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="WhatsNewForm.de.resx">
-      <DependentUpon>WhatsNewForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="WhatsNewForm.resx">
-      <DependentUpon>WhatsNewForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <None Include="AaxAudioConverter.de.odt" />
-    <None Include="AaxAudioConverter.de.pdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="AaxAudioConverter.odt" />
-    <None Include="AaxAudioConverter.pdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="app.manifest" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AaxAudioConverterLib\AaxAudioConverterLib.csproj">
-      <Project>{724c151f-65e8-4108-8cfb-ae2fd4c63033}</Project>
-      <Name>AaxAudioConverterLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AuxLib\AuxLib.csproj">
-      <Project>{64C35BCC-BF7A-47BE-89F2-7ABB470BDB0B}</Project>
-      <Name>AuxLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AuxWin32Lib\AuxWin32Lib.csproj">
-      <Project>{66AF7DB4-AA8E-45F5-BB1B-919C5008E6B0}</Project>
-      <Name>AuxWin32Lib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AuxWinLib\AuxWinLib.csproj">
-      <Project>{d3ed00a5-5855-40f4-aeb8-bb9eef35b7f7}</Project>
-      <Name>AuxWinLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AuxWinLib\DialogBox\AuxWin.DialogBox.csproj">
-      <Project>{d8e74eae-8661-4764-baef-e9e138779d85}</Project>
-      <Name>AuxWin.DialogBox</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PerfLib\PerfLib.csproj">
-      <Project>{AB642D01-29BF-4FBC-A001-E1795AC38108}</Project>
-      <Name>PerfLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PropGridLib\PropGridLib.csproj">
-      <Project>{7B091DC6-75AA-403C-AD5E-EA3CB6610CD0}</Project>
-      <Name>PropGridLib</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\added.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\blank.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="AaxAudioConverter.latest.de.rtf" />
-    <None Include="AaxAudioConverter.latest.rtf" />
-    <Content Include="ffmpeg.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Resources\hidden features de.png" />
     <Content Include="Resources\hidden features en.png" />
-    <None Include="ffmpeg64.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <Content Include="FodyWeavers.xml" />
     <Content Include="Resources\audio.ico" />
     <Content Include="Resources\audio.png" />
@@ -348,13 +57,33 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Fody.6.6.0\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.6.6.0\build\Fody.targets'))" />
-    <Error Condition="!Exists('..\packages\Costura.Fody.4.1.0\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Costura.Fody.4.1.0\build\Costura.Fody.props'))" />
-  </Target>
-  <Import Project="..\packages\Fody.6.6.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.6.0\build\Fody.targets')" />
+  <ItemGroup>
+    <PackageReference Include="Costura.Fody"
+                      Version="5.7.0">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Fody" Version="6.8.0" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Core" Version="1.1.5" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="7.0.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Runtime.Handles" Version="4.3.0" />
+    <PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.4" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="7.0.2" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
 </Project>
