--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -1,206 +1,254 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="audiamus.aaxconv.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings"
+                  type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="audiamus.aaxconv.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               allowExeDefinition="MachineToLocalUser"
+               requirePermission="false" />
     </sectionGroup>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="audiamus.aaxconv.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings"
+                  type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="audiamus.aaxconv.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               requirePermission="false" />
     </sectionGroup>
   </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-  </startup>
-  
-  <System.Windows.Forms.ApplicationConfigurationSection>
-    <add key="DpiAwareness" value="PerMonitorV2" />
-  </System.Windows.Forms.ApplicationConfigurationSection>
-  
   <userSettings>
     <audiamus.aaxconv.Properties.Settings>
-      <setting name="InputDirectory" serializeAs="String">
+      <setting name="InputDirectory"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="OutputDirectory" serializeAs="String">
+      <setting name="OutputDirectory"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="FFMpegDirectory" serializeAs="String">
+      <setting name="FFMpegDirectory"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="RelaxedFFmpegVersionCheck" serializeAs="String">
+      <setting name="RelaxedFFmpegVersionCheck"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="FileDateColumn" serializeAs="String">
+      <setting name="FileDateColumn"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="ConvFormat" serializeAs="String">
+      <setting name="ConvFormat"
+               serializeAs="String">
         <value>mp3</value>
       </setting>
-      <setting name="ConvMode" serializeAs="String">
+      <setting name="ConvMode"
+               serializeAs="String">
         <value>chapters</value>
       </setting>
-      <setting name="TrkDurMins" serializeAs="String">
+      <setting name="TrkDurMins"
+               serializeAs="String">
         <value>5</value>
       </setting>
-      <setting name="FileNaming" serializeAs="String">
+      <setting name="FileNaming"
+               serializeAs="String">
         <value>track_book_author</value>
       </setting>
-      <setting name="TitleNaming" serializeAs="String">
+      <setting name="TitleNaming"
+               serializeAs="String">
         <value>track_book</value>
       </setting>
-      <setting name="TrackNumbering" serializeAs="String">
+      <setting name="TrackNumbering"
+               serializeAs="String">
         <value>track</value>
       </setting>
-      <setting name="TotalTracks" serializeAs="String">
+      <setting name="TotalTracks"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="GenreNaming" serializeAs="String">
+      <setting name="GenreNaming"
+               serializeAs="String">
         <value>standard</value>
       </setting>
-      <setting name="GenreName" serializeAs="String">
+      <setting name="GenreName"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="ChapterNaming" serializeAs="String">
+      <setting name="ChapterNaming"
+               serializeAs="String">
         <value>standard</value>
       </setting>
-      <setting name="ChapterName" serializeAs="String">
+      <setting name="ChapterName"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="SeriesTitleLeft" serializeAs="String">
+      <setting name="SeriesTitleLeft"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="LongBookTitle" serializeAs="String">
+      <setting name="LongBookTitle"
+               serializeAs="String">
         <value>no</value>
       </setting>
-      <setting name="PartNaming" serializeAs="String">
+      <setting name="PartNaming"
+               serializeAs="String">
         <value>standard</value>
       </setting>
-      <setting name="PartName" serializeAs="String">
+      <setting name="PartName"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="Language" serializeAs="String">
+      <setting name="Language"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="PartNames" serializeAs="String">
+      <setting name="PartNames"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="AddnlValTitlePunct" serializeAs="String">
+      <setting name="AddnlValTitlePunct"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="Genres" serializeAs="String">
+      <setting name="Genres"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="FlatFolders" serializeAs="String">
+      <setting name="FlatFolders"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="FlatFolderNaming" serializeAs="String">
+      <setting name="FlatFolderNaming"
+               serializeAs="String">
         <value>author_book</value>
       </setting>
-      <setting name="WithSeriesTitle" serializeAs="String">
+      <setting name="WithSeriesTitle"
+               serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="NumDigitsSeriesSeqNo" serializeAs="String">
+      <setting name="NumDigitsSeriesSeqNo"
+               serializeAs="String">
         <value>2</value>
       </setting>
-      <setting name="FullCaptionBookFolder" serializeAs="String">
+      <setting name="FullCaptionBookFolder"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="OutFolderConflict" serializeAs="String">
+      <setting name="OutFolderConflict"
+               serializeAs="String">
         <value>ask</value>
       </setting>
-      <setting name="ExtraMetaFiles" serializeAs="String">
+      <setting name="ExtraMetaFiles"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="OnlineUpdate" serializeAs="String">
+      <setting name="OnlineUpdate"
+               serializeAs="String">
         <value>promptForInstall</value>
       </setting>
-      <setting name="ShortChapterSec" serializeAs="String">
+      <setting name="ShortChapterSec"
+               serializeAs="String">
         <value>25</value>
       </setting>
-      <setting name="VeryShortChapterSec" serializeAs="String">
+      <setting name="VeryShortChapterSec"
+               serializeAs="String">
         <value>10</value>
       </setting>
-      <setting name="VerifyAdjustChapterMarks" serializeAs="String">
+      <setting name="VerifyAdjustChapterMarks"
+               serializeAs="String">
         <value>splitChapterOrTimeMode</value>
       </setting>
-      <setting name="Latin1EncodingForPlaylist" serializeAs="String">
+      <setting name="Latin1EncodingForPlaylist"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="IntermedCopySingle" serializeAs="String">
+      <setting name="IntermedCopySingle"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="FixAACEncoding" serializeAs="String">
+      <setting name="FixAACEncoding"
+               serializeAs="String">
         <value>withIntermediateCopy</value>
       </setting>
-      <setting name="NamedChapters" serializeAs="String">
+      <setting name="NamedChapters"
+               serializeAs="String">
         <value>yes</value>
       </setting>
-      <setting name="VariableBitRate" serializeAs="String">
+      <setting name="VariableBitRate"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="ReducedBitRate" serializeAs="String">
+      <setting name="ReducedBitRate"
+               serializeAs="String">
         <value>off</value>
       </setting>
-      <setting name="AutoLaunchPlayer" serializeAs="String">
+      <setting name="AutoLaunchPlayer"
+               serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="M4B" serializeAs="String">
+      <setting name="M4B"
+               serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="AaxCopyMode" serializeAs="String">
+      <setting name="AaxCopyMode"
+               serializeAs="String">
         <value>no</value>
       </setting>
-      <setting name="AaxCopyDirectory" serializeAs="String">
+      <setting name="AaxCopyDirectory"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="Version" serializeAs="String">
+      <setting name="Version"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="SettingsTab" serializeAs="String">
+      <setting name="SettingsTab"
+               serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="PreferEmbeddedChapterTimes" serializeAs="String">
+      <setting name="PreferEmbeddedChapterTimes"
+               serializeAs="String">
         <value>no</value>
       </setting>
-      <setting name="TagArtist" serializeAs="String">
+      <setting name="TagArtist"
+               serializeAs="String">
         <value>author__narrator__</value>
       </setting>
-      <setting name="TagAlbumArtist" serializeAs="String">
+      <setting name="TagAlbumArtist"
+               serializeAs="String">
         <value>none</value>
       </setting>
-      <setting name="TagComposer" serializeAs="String">
+      <setting name="TagComposer"
+               serializeAs="String">
         <value>none</value>
       </setting>
-      <setting name="TagConductor" serializeAs="String">
+      <setting name="TagConductor"
+               serializeAs="String">
         <value>none</value>
       </setting>
-      <setting name="OnlineUpdateOthersDeclined" serializeAs="String">
+      <setting name="OnlineUpdateOthersDeclined"
+               serializeAs="String">
         <value />
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
     <audiamus.aaxconv.Properties.Settings>
-      <setting name="NonParallel" serializeAs="String">
+      <setting name="NonParallel"
+               serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="FFmpeg64bitHours" serializeAs="String">
+      <setting name="FFmpeg64bitHours"
+               serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="OnlineUpdateUrl" serializeAs="String">
+      <setting name="OnlineUpdateUrl"
+               serializeAs="String">
         <value />
       </setting>
-      <setting name="OnlineUpdateDebug" serializeAs="String">
+      <setting name="OnlineUpdateDebug"
+               serializeAs="String">
         <value>False</value>
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </applicationSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
