--- a/src/AaxAudioConverterLib/AaxAudioConverterLib.csproj
+++ b/src/AaxAudioConverterLib/AaxAudioConverterLib.csproj
@@ -1,125 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{724C151F-65E8-4108-8CFB-AE2FD4C63033}</ProjectGuid>
+    <TargetFramework>net7.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>audiamus.aaxconv.lib</RootNamespace>
-    <AssemblyName>AaxAudioConverterLib</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>7.1</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.1</LangVersion>
+    <AssemblyTitle>AaxAudioConverterLib</AssemblyTitle>
+    <Company>audiamus</Company>
+    <Product>AaxAudioConverterLib</Product>
+    <Copyright>Copyright © 2019 - 2023 audiamus</Copyright>
+    <AssemblyVersion>1.18.2.0</AssemblyVersion>
+    <FileVersion>1.18.2.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ATL, Version=4.20.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\z440.atl.core.4.20.0\lib\net48\ATL.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Ude.NetStandard, Version=1.0.2.0, Culture=neutral, PublicKeyToken=103cb45fc06c90e4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ude.NetStandard.1.2.0\lib\net45\Ude.NetStandard.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\AuxLib\AuxLib.csproj" />
+    <ProjectReference Include="..\AuxWin32Lib\AuxWin32Lib.csproj" />
+    <ProjectReference Include="..\TreeDecomposition\TreeDecomposition.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AaxAudioConverter.Nested.cs" />
-    <Compile Include="AaxFileCopier.cs" />
-    <Compile Include="ActivationCodeApp.cs" />
-    <Compile Include="ActivationCodeRegistry.cs" />
-    <Compile Include="AudibleAppContentMetadata.cs" />
-    <Compile Include="AudibleAppSimsBySeries.cs" />
-    <Compile Include="Book.Part.cs" />
-    <Compile Include="ContentMetadata.json.cs" />
-    <Compile Include="ExtraMetaFiles.cs" />
-    <Compile Include="FFMetaData.cs" />
-    <Compile Include="FileEx.cs" />
-    <Compile Include="FixAtomESDS.cs" />
-    <Compile Include="OnlineUpdate.cs" />
-    <Compile Include="ChainPunctuation.cs" />
-    <Compile Include="AudioMeta.cs" />
-    <Compile Include="CustomTagFileNames.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Chapter.cs" />
-    <Compile Include="Interfaces.cs" />
-    <Compile Include="Book.Progress.cs" />
-    <Compile Include="SeriesTitles.json.cs" />
-    <Compile Include="SimsBySeries.json.cs" />
-    <Compile Include="ThreadProgress.cs" />
-    <Compile Include="ToStringConverters.cs" />
-    <Compile Include="Track.cs" />
-    <Compile Include="ProgressMessage.cs" />
-    <Compile Include="ResourceInterface.cs" />
-    <Compile Include="TagAndFileNamingHelper.Numbers.cs" />
-    <Compile Include="TagAndFileNamingHelper.cs" />
-    <Compile Include="AaxFileItem.cs" />
-    <Compile Include="ActivationCode.cs" />
-    <Compile Include="CallbackWrapper.cs" />
-    <Compile Include="AaxAudioConverter.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="FFmpeg.cs" />
-    <Compile Include="SettingsInterface.cs" />
-    <Compile Include="Book.cs" />
-    <Compile Include="ChapteredTracks.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TimeInterval.cs" />
-    <Compile Include="UpdatePackageInfo.cs" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="Ude.NetStandard" Version="1.2.0" />
+    <PackageReference Include="z440.atl.core" Version="5.9.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AuxLib\AuxLib.csproj">
-      <Project>{64C35BCC-BF7A-47BE-89F2-7ABB470BDB0B}</Project>
-      <Name>AuxLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AuxWin32Lib\AuxWin32Lib.csproj">
-      <Project>{66AF7DB4-AA8E-45F5-BB1B-919C5008E6B0}</Project>
-      <Name>AuxWin32Lib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TreeDecomposition\TreeDecomposition.csproj">
-      <Project>{BBEFB463-1F6C-4D35-AF83-B5C3CEA9915E}</Project>
-      <Name>TreeDecomposition</Name>
-    </ProjectReference>
+    <Compile Remove="ContentMetaDataJson.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
