--- a/src/AuxLib/AuxLib.csproj
+++ b/src/AuxLib/AuxLib.csproj
@@ -1,75 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{64C35BCC-BF7A-47BE-89F2-7ABB470BDB0B}</ProjectGuid>
+    <TargetFramework>net7.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>audiamus.aux</RootNamespace>
     <AssemblyName>UtilLib</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyTitle>AuxLib</AssemblyTitle>
+    <Company>audiamus</Company>
+    <Product>AuxLib</Product>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ApplEnv.cs" />
-    <Compile Include="ArgParser.cs" />
-    <Compile Include="BigEndianReader.cs" />
-    <Compile Include="BooleanYesNoConverter.cs" />
-    <Compile Include="ChainPunctuation.cs" />
-    <Compile Include="DefaultSettings.cs" />
-    <Compile Include="Encoding.cs" />
-    <Compile Include="EnumChainTypeConverter.cs" />
-    <Compile Include="EnumUtil.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Indent.cs" />
-    <Compile Include="InteractionMessage.cs" />
-    <Compile Include="Interfaces.cs" />
-    <Compile Include="LocalFileSettingsProvider.cs" />
-    <Compile Include="Logging.cs" />
-    <Compile Include="EnumConverter.cs" />
-    <Compile Include="ProcessHost.cs" />
-    <Compile Include="IInteractionCallback.cs" />
-    <Compile Include="InteractionCallback.cs" />
-    <Compile Include="ProcessList.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResourceGuard.cs" />
-    <Compile Include="ResourceManagerEx.cs" />
-    <Compile Include="Singleton.cs" />
-    <Compile Include="Temp.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
